# db-connector-hackathon

./: .gitignore
databricks/: identity.py  tables_bulk_index.py
glean_ingestor/: pyproject.toml
glean_ingestor/glean_ingestor/: add_beta_users.py  add_datasource.py  constants.py  dashboards_bulk_index.py  main.py  notebooks.py  tables_bulk_index.py
