[tool.poetry]
name = "glean-ingestor"
version = "0.1.3"
description = ""
authors = ["nithinkdb <nithin.krishnamurthi@databricks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
glean-indexing-api-client = { url = "https://app.glean.com/meta/indexing_api_client.zip"}
idna = "3.4"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
requests = "2.31.0"
six = "1.16.0"
urllib3 = "2.0.4"

[tool.poetry.scripts]
glean_run = "glean_ingestor.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"